# Projet-rpg-rust-2021

./: README.md
projet_rust/: Cargo.toml
projet_rust/src/: deser.rs  hist2  histoire  histoire.txt  image  main.rs  sauvegarde.rs  test.rs
projet_rust/src/poubelle/: best  deser.rs  hist2.txt  main .rs
