[package]
name = "projet_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
yaml-rust = "0.4"
tui = "0.9"
termion = "1.5"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_derive = "1.0.103"
serde_yaml = "0.8"

[dependencies.crossterm]
version = "0.17"
features = ["event-stream"] 

